[package]
name = "echo-backend"
version = "0.3.0"
edition = "2021"
authors = ["Alex Mikhalevich <alex.mikhalevich@cartesi.io>"]

[dependencies]
json = "0.12"
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }

rs_merkle = { version = "1.2", default-features = false }
risc0-zkp = { version = "0.11", default-features = false, features = ["verify"] }
risc0-zkvm = { version = "0.11", default-features = false, features = ["verify", "host", "std"] }

anyhow = "1"
serde = "1"
bincode = "1"

password-checker-methods = { path = "./password-checker/methods" }
password-checker-core = { path = "./password-checker/core" }
