[package]
name = "password-checker-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
password-checker-core = { path = "../../core" }
risc0-zkvm-guest = "0.11"
rs_merkle = { version = "1.2", default-features = false }

[profile.release]
lto = true
opt-level = "z"

[build-dependencies]
risc0-build = "0.11"
